tests/cases/patterns/ok/pattern-ref-ownership-vector.ari
fn make_owned(value: i64) -> own i64 {
  return value;
}

fn main() -> i64 {
  var values: Vec[own i64] = [make_owned(1), make_owned(2)];
  {
    let ref mut [_, second] = values;
  }
  drop values;
  return 0;
}
