tests/cases/patterns/errors/pattern-ref-non-addressable-enum-payload.ari
enum Mixed {
  Empty,
  Pair(i32, i64),
}

fn main() -> i64 {
  let item: Mixed = Pair(1i32, 2);
  let ref Pair(left, right) = item;
  return 0;
}
